# BattleRoyale_Console

./: .gitignore  CMakeLists.txt
cfg/: data_final_spells.py  final_armor.json  final_melee_weapons.json  final_postions.json  final_ranged_weapons.json  final_spells.json  parse_item_list.py  parse_spell.py  parse_weapon.py  simpleRangedWeapons.json
src/: ability.cpp  ability.h  actions.h  armor.h  attack.h  character.cpp  character.h  class.h  data_base.h  death_saving_throw.h  dice.h  game_manager.cpp  game_manager.h  health.h  helpers.h  interface.cpp  interface.h  item.h  main.cpp  player.cpp  player.h  race.h  spell.h  spell_data_base.h  status_effect.h  tournament.cpp  tournament.h  turn.h  turn_action.cpp  turn_action.h  weapon.h  weapon_data_base.h  wear_armor_data_base.h
src/classes/: barbarian.h  bard.h  class.h  cleric.h  druid.h  factory.h  fighter.h  ranger.h  rogue.h  sorcerer.h  warlock.h  wizard.h
src/races/: drow.h  dwarf.h  elf.h  factory.h  githyanki.h  gnome.h  halfelf.h  halfling.h  human.h  race.h  tiefling.h
test/: main.cpp
